fixing method
add parameterize method instead create function one by one
